Fix modular test